--- a/HybridFramework/test-output/index.html
+++ b/HybridFramework/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Suite" class="navigator-link ">
-                    <span>C:\Users\rahul\eclipse-workspace\HybridFramework\testng.xml</span>
+                    <span>C:\Users\rahul\git\HybridFramework\HybridFramework\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -135,7 +135,7 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\rahul\eclipse-workspace\HybridFramework\testng.xml</span>
+            <span class="header-content">C:\Users\rahul\git\HybridFramework\HybridFramework\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -188,7 +188,7 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'checkValidateUser')
 data.setCell(0, 2, 'com.wordpress.TestCases.VerifyFindByLoginPage')
-data.setCell(0, 3, 1352);
+data.setCell(0, 3, 1715);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
@@ -226,15 +226,15 @@ return data;
               </div> <!-- configuration-suite before -->
               <div class="configuration-class before">
                 <span class="method-name">setup</span>
-                <span class="method-start">861 ms</span>
+                <span class="method-start">39 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">checkValidateUser</span>
-                <span class="method-start">12858 ms</span>
+                <span class="method-start">10989 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">14221 ms</span>
+                <span class="method-start">12717 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
