--- a/HybridFramework/test-output/old/Default suite/methods.html
+++ b/HybridFramework/test-output/old/Default suite/methods.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f9eccc">  <td>20/08/15 13:37:32</td>   <td>0</td> <td title="&gt;&gt;BasePage.setUpSuite()[pri:0, instance:com.wordpress.TestCases.VerifyFindByLoginPage@61dd025]">&gt;&gt;setUpSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2021707251</td>   <td></td> </tr>
-<tr bgcolor="f9eccc">  <td>20/08/15 13:37:32</td>   <td>28</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePage.setup()[pri:0, instance:com.wordpress.TestCases.VerifyFindByLoginPage@61dd025]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2021707251</td>   <td></td> </tr>
-<tr bgcolor="b7d96a">  <td>20/08/15 13:37:41</td>   <td>9714</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyFindByLoginPage.checkValidateUser()[pri:0, instance:com.wordpress.TestCases.VerifyFindByLoginPage@61dd025]">checkValidateUser</td> 
-  <td>main@2021707251</td>   <td></td> </tr>
-<tr bgcolor="f9eccc">  <td>20/08/15 13:37:43</td>   <td>10776</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePage.tearDown()[pri:0, instance:com.wordpress.TestCases.VerifyFindByLoginPage@61dd025]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2021707251</td>   <td></td> </tr>
+<tr bgcolor="a263c2">  <td>20/08/15 14:59:29</td>   <td>0</td> <td title="&gt;&gt;BasePage.setUpSuite()[pri:0, instance:com.wordpress.TestCases.VerifyFindByLoginPage@33afa13b]">&gt;&gt;setUpSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@581318631</td>   <td></td> </tr>
+<tr bgcolor="a263c2">  <td>20/08/15 14:59:29</td>   <td>30</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePage.setup()[pri:0, instance:com.wordpress.TestCases.VerifyFindByLoginPage@33afa13b]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@581318631</td>   <td></td> </tr>
+<tr bgcolor="d5878c">  <td>20/08/15 14:59:39</td>   <td>10311</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyFindByLoginPage.checkValidateUser()[pri:0, instance:com.wordpress.TestCases.VerifyFindByLoginPage@33afa13b]">checkValidateUser</td> 
+  <td>main@581318631</td>   <td></td> </tr>
+<tr bgcolor="a263c2">  <td>20/08/15 14:59:40</td>   <td>11523</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePage.tearDown()[pri:0, instance:com.wordpress.TestCases.VerifyFindByLoginPage@33afa13b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@581318631</td>   <td></td> </tr>
 </table>
